2008-11-11 Add 'pad_to' and 'sides' parameters to mlab.psd() to
           allow controlling of zero padding and returning of
           negative frequency components, respecitively.  These are
           added in a way that does not change the API. - RM

2008-11-10 Fix handling of c kwarg by scatter; generalize
           is_string_like to accept numpy and numpy.ma string
           array scalars. - RM and EF

2008-11-09 Fix a possible EINTR problem in dviread, which might help
           when saving pdf files from the qt backend. - JKS

2008-10-24 Added Jae Joon's fancy arrow, box and annotation
           enhancements -- see
           examples/pylab_examples/annotation_demo2.py

2008-10-23 Autoscaling is now supported with shared axes - EF

2008-10-23 Fixed exception in dviread that happened with Minion - JKS

2008-10-21 set_xlim, ylim now return a copy of the viewlim array to
           avoid modify inplace surprises

2008-10-20 Added image thumbnail generating function
           matplotlib.image.thumbnail.  See
           examples/misc/image_thumbnail.py - JDH

2008-10-20 Applied scatleg patch based on ideas and work by Erik
           Tollerud and Jae-Joon Lee. - MM

2008-10-11 Fixed bug in pdf backend: if you pass a file object for
           output instead of a filename, e.g. in a wep app, we now
           flush the object at the end. - JKS

2008-10-08 Add path simplification support to paths with gaps. - EF

2008-10-05 Fix problem with AFM files that don't specify the font's
           full name or family name. - JKS

2008-10-04 Added 'scilimits' kwarg to Axes.ticklabel_format() method,
           for easy access to the set_powerlimits method of the
           major ScalarFormatter. - EF

2008-10-04 Experimental new kwarg borderpad to replace pad in legend,
           based on suggestion by Jae-Joon Lee.  - EF

2008-09-27 Allow spy to ignore zero values in sparse arrays, based
           on patch by Tony Yu.  Also fixed plot to handle empty